--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Flask = "^3.0.1"
 pandas = "^2.3.0"
 google-cloud-bigquery = "^3.34.0"
 db-dtypes = "^1.4.3"
+gunicorn = "^23.0.0"
 
 [tool.poetry.scripts]
 app = 'src.main:main'
